# bachelor-project

./: .gitignore  README.md  Tiltfile  build_and_push.sh  docker-compose.yaml
deployment/charts/base/: Chart.yaml  values.yaml
deployment/charts/postgresql/: Chart.yaml
deployment/kubernetes/ai_service/: postgresql-values.yaml  values.dev.yaml  values.yaml
deployment/kubernetes/auth_service/: values.dev.yaml  values.yaml
deployment/kubernetes/booking_service/: booking.values.local.yaml  deployment.yaml  service.yaml  values.dev.yaml  values.yaml
deployment/kubernetes/elasticsearch/: Tiltfile  values.dev.yaml  values.yaml
deployment/kubernetes/keycloak/: Tiltfile  realm-export.json  values.yaml
deployment/kubernetes/kong/: Tiltfile  http_route.yaml  ingress.yaml  plugins.yaml  rl_plugin.yaml  values.dev.yaml  values.yaml
deployment/kubernetes/notification_service/: values.dev.yaml  values.yaml
docs/design/: Untitled Diagram.drawio  microservice-arch.drawio
services/ai-service/: pyproject.toml
services/ai_service/: Dockerfile  Tiltfile  docker-compose.yaml  lifespan.py  main.py  pyproject.toml  restaurants.csv  settings.py  test.py
services/ai_service/api/dtos/: chat_dtos.py  dtos.py
services/ai_service/api/routes/: chat.py  embedding.py
services/ai_service/app/: lifespan.py  main.py  settings.py
services/ai_service/app/api/dtos/: chat_dtos.py  dtos.py
services/ai_service/app/api/routes/: chat.py  embedding.py
services/ai_service/app/db/: dependencies.py  es.py  models.py
services/ai_service/app/services/: chat.py  client.py  embeddings.py
services/ai_service/app/services/azure_ai/: chat.py  client.py  embeddings.py
services/ai_service/app/services/es/: dependencies.py
services/ai_service/app/services/prometheus/: prometheus.py
services/ai_service/app/services/rabbit/: dependencies.py  lifetime.py
services/ai_service/db/: database.py  dependencies.py  models.py
services/ai_service/services/: chat.py  client.py  embeddings.py
services/ai_service/test_data/: restaurants.json  scraper.py  seed_db.py
services/ai_service/utils/: decorators.py
services/auth_service/: Dockerfile  Makefile  Tiltfile  pyproject.toml
services/auth_service/src/: app.py  auth_utils.py  daos.py  dtos.py  models.py  routes.py  settings.py
services/auth_service/src/db/: db_lifetime.py
services/booking_service/: .dockerignore  .env  .env.example  Dockerfile  Makefile  Tiltfile  application.py  o.yaml  pyproject.toml  settings.py
services/booking_service/alembic/: env.py
services/booking_service/routes/: health_routes.py
services/booking_service/src/: __init__.py  app.py  constants.py  daos.py  dtos.py  enums.py  models.py  routes.py  settings.py  tasks.py  utils.py
services/booking_service/src/daos/: __init__.py  booking_daos.py
services/booking_service/src/db/: __init__.py  db_dependencies.py  db_lifetime.py  db_utils.py
services/booking_service/src/dtos/: __init__.py  base_dtos.py  core_dtos.py  response_dtos.py
services/booking_service/src/routes/: __init__.py  health_routes.py
services/booking_service/src/services/http_client/: dependencies.py  lifetime.py
services/booking_service/src/services/rabbit/: dependencies.py  lifetime.py
services/booking_service/src/services/redis/: dependencies.py  lifetime.py
services/booking_service/src/services/restaurant_client/: client.py
services/booking_service/tests/pytest/: conftest.py
services/booking_service/tests/pytest/unit/: test_test.py
services/notification_service/: .dockerignore  .env.example  Dockerfile  Makefile  Tiltfile  o.yaml  pyproject.toml
services/notification_service/src/: app.py  dtos.py  enums.py  notification_handler.py  routes.py  settings.py  state.py
services/notification_service/src/services/email_service/: email_service.py
services/notification_service/src/services/rabbit/: dependencies.py  lifetime.py
services/restaurant_service/: Dockerfile  Tiltfile  build.ts  docker-compose.yaml  drizzle.config.ts  eslint.config.js  eslint.config.mjs  jest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
services/restaurant_service1/: Tiltfile  package.json  pnpm-lock.yaml  tsconfig.json
(+103 files in other folders)
