[project]
name = "ai-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "pydantic>=2.10.1",
    "sqlalchemy>=2.0.36",
    "uvicorn>=0.32.1",
    "pydantic-settings>=2.3.4",
    "langchain>=0.3.7",
    "asyncpg>=0.30.0",
    "openai>=1.55.0",
    "langchain-community>=0.3.4",
    "greenlet>=3.1.1",
    "langchain-postgres>=0.0.12",
    "pgvector>=0.2.5",
    "psycopg[async]>=3.2.3",
    "beautifulsoup4>=4.12.3",
    "tiktoken>=0.8.0",
]
