[project]
name = "booking-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "mypy>=1.11.2",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "ruff>=0.6.7",
    "uvicorn>=0.30.6",
]
