[project]
name = "booking-svc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika>=9.5.3",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.0",
    "httpx==0.23.3",
    "loguru>=0.7.3",
    "mypy>=1.11.2",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "ruff>=0.6.7",
    "sqlalchemy[asyncio]>=2.0.36",
    "uvicorn>=0.30.6",
    "yarl>=1.18.3",
]

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
namespace_packages = true
plugins = ["sqlalchemy.ext.mypy.plugin", "pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests/pytest"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore:.*unclosed.*:ResourceWarning",
]
# env = ["BOOKING_SERVICE_PG_DB=booking-db_test"]
